# ProjectGliese

./: LICENSE  README.md
src/: CMakeLists.txt  gst-backend.c  gst-backend.h  main.c  ui.c  ui.h
